2014-10-02 Matt:
	* Updating EField and APotPlots. Latest investigations have been added.
	* Tagging Version 00.04

2014-10-01 Matt:
	* Including corrected makeRefractedScan.py (forgot previously). Finished now
	* Updating Antenna.{cc,hh} to store angle information
	* Updating SetupAntenna to handle angle information
	* Updating EventAction to write the angle information to txt file
	* Updating refractive scane and everything mentioned above to handle calculation of the
		refracted electric field. Previous method was incorrect approach.
	* Updating EField calculation for the comparison refracted with unrefracted
	* Adding refractedAngles script to plot refracted angles vs. height

2014-09-30 Matt:
	* Changed antenna position for default to 1km for comparison with ZHS.
	* Checked agreement between ZHS and G4 for 40 MeV after bug fixes.
	* Added all plots to output root file from APotPlots.py
	* updated EField script to check scaling results. Everything seems consistent
	* Updated VPCompareZHS to include latest ZHS comparison files.
	* Updated iceblock from R10m to R1000m following update in antenna position
	* TODO: Add antennta default distance as a parameter
	* Adding makeRefractionScan.py -- This is still work in progress.
		- Right now for angles near critical angle, z increases when it should continue
		decreasing. I think it has to do with the sign ambiguity. Try to impose some
		requirements.

2014-09-29 Matt:
	* Updating some minor changes after figuring out difference with ZHS.
	* Committing verified version with velocity correction in place.
	* Committing E-field drawing script.  Need to add more modularity for future

2014-09-09 Matt:
	* Committing debugged vector potential calculation. Right now two ways to calculate the velocity.
	* Adding python script to make Vector potential plots
	* Adding python script to make Cherenkov Ring plots
	* Adding python script to make filelists for Zscan and Cherenkov scan