@@ -1,14 +1,21 @@
 
 #include "PrimaryGeneratorAction.hh"
 
+
 //-----------------------------------------------------------------//
 // Constructor
 //-----------------------------------------------------------------//
 PrimaryGeneratorAction::PrimaryGeneratorAction(DetectorConstruction* myDC, 
 					       G4float partEnergy,
 					       std::string partType,
-					       G4int n_particle) :
-  myDetector(NULL)
+					       G4int n_particle,
+					       G4bool b_flat,
+					       G4bool b_gauss,
+					       G4double sigma) :
+  myDetector(NULL),
+  m_flat(b_flat),
+  m_gauss(b_gauss),
+  m_sigma(sigma)
 {
 
   //
@@ -20,7 +27,9 @@ PrimaryGeneratorAction::PrimaryGeneratorAction(DetectorConstruction* myDC,
   // Specify the number of particles to be simulated
   //
   //G4int n_particle = 1;
-  particleGun = new G4ParticleGun(n_particle);
+  //particleGun = new G4ParticleGun(n_particle);
+  particleGun  = new G4ParticleGun(1);
+  m_nParticles = n_particle; 
 
   //
   // specify the particle to be used
@@ -31,7 +40,16 @@ PrimaryGeneratorAction::PrimaryGeneratorAction(DetectorConstruction* myDC,
   particleGun->SetParticleDefinition(particle);
   particleGun->SetParticleMomentumDirection(G4ThreeVector(0.,0.,1.)); // z-direction
   particleGun->SetParticleEnergy(partEnergy);
+
+  //f_test = new std::ofstream("testingDist.txt",std::ofstream::out);
+  //f_test = new std::ofstream("beamProfile/Gauss.txt",std::ofstream::out);
+  //f_test = new std::ofstream("beamProfile/Flat.txt",std::ofstream::out);
   
+  //
+  // Specify the seeds
+  //
+  G4RandGauss::setTheSeed(1234567654);
+  CLHEP::RandFlat::setTheSeed(1234567654);
 
 }
 
@@ -51,12 +69,66 @@ PrimaryGeneratorAction::~PrimaryGeneratorAction()
 void PrimaryGeneratorAction::GeneratePrimaries(G4Event* anEvent)
 {
 
-  // Right now my block of ice is set such that it is in the
-  // right side of the world volume.  World volume is 2*km cube
-  // and the iceblock is a 1*km cube set such that ice is offset
-  // So particles should be input at 0,0,0
-  particleGun->SetParticlePosition(G4ThreeVector(0*mm,0*mm,0*mm));  
-  particleGun->GeneratePrimaryVertex(anEvent);
 
+  if( m_gauss ){
+    
+    // Setup random Gaussian with some seed.
+    G4double x_rand = 0.0;
+    G4double y_rand = 0.0;
+    //for(G4int i=0; i<m_nParticles; ++i){
+    for(G4int i=0; i<100000; ++i){
+      x_rand = G4RandGauss::shoot(0,m_sigma);
+      y_rand = G4RandGauss::shoot(0,m_sigma);
+      particleGun->SetParticlePosition(G4ThreeVector(x_rand*mm,y_rand*mm,0*mm));
+      particleGun->GeneratePrimaryVertex(anEvent);
+      //(*f_test) << x_rand <<" " << y_rand << std::endl;
+    }// end loop over # particles
+
+  }// end if gauss
+
+  else if( m_flat ){
+
+    // Get uniform random number
+    G4double x_rand  = 0;
+    G4double y_rand  = 0;
+    G4double x_sign  = 1;
+    G4double y_sign  = 1;
+    for(G4int i=0; i<100000; ++i){
+      
+      x_rand = 999;
+      y_rand = 999;
+      x_sign = 1;
+      y_sign = 1;
+      if( G4UniformRand() < 0.5 ) x_sign = -1;
+      if( G4UniformRand() < 0.5 ) y_sign = -1;
+      
+      // Make sure radius is <= m_sigma
+      while( sqrt( x_rand*x_rand + y_rand*y_rand ) > m_sigma ){
+	x_rand = m_sigma * G4UniformRand();
+	y_rand = m_sigma * G4UniformRand();
+      }
+      x_rand *= x_sign;
+      y_rand *= y_sign;
+
+      particleGun->SetParticlePosition(G4ThreeVector(x_rand*mm,y_rand*mm,0*mm));
+      particleGun->GeneratePrimaryVertex(anEvent);
+      //(*f_test) << x_rand <<" " << y_rand << std::endl;
+
+    }// end loop over # particles
+
+
+  }
+
+  else{
+
+    // For nominal testing, just put them all at 0,0,0:
+    G4ThreeVector startPos = G4ThreeVector(0*mm,0*mm,0*mm);
+    for(G4int i=0; i<m_nParticles; ++i){
+      particleGun->SetParticlePosition(startPos);
+      particleGun->GeneratePrimaryVertex(anEvent);
+    }
+
+  }// End default (0,0,0) starting point for all particles
+  
 }
 
